--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </section>
         <!-- Modal -->
         <section>
-            <dialog id="modal" class="flex flex-col items-center p-10 px-12 rounded">
+            <dialog id="modal" class="flex flex-col items-center p-10 px-12 rounded hidden">
                 <img class="w-1/2" src="images/congo.png" alt="">
                 <div class="text-center mt-3">
                     <h1 class="font-bold text-3xl">Congratulations</h1>
