--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
             background-color: gray;
             opacity: .5;
         }
+        #trash-can{
+            display: none;
+        }
+        #selected-items li:hover #trash-can{
+            display: block;
+        }
     </style>
 </head>
 
@@ -31,15 +37,16 @@
         </section>
     </header>
     <main>
-        <section class="w-9/12 mx-auto flex gap-6 mt-20 mb-40">
+        <section id="cards-container" class="w-9/12 mx-auto flex gap-6 mt-20 mb-40">
             <!-- cards -->
             <section class="w-9/12 grid grid-rows-3 gap-10">
                 <section>
                     <!-- Kitchenware cards -->
                     <h1 class="mb-6 text-3xl font-semibold">Kitchenware</h1>
-                    <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                    <div id="kitchenware-cards" class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                         <!-- card1 -->
-                        <div id="card-1" class="flex flex-col items-center px-2 py-4 bg-white rounded">
+                        <div id="card-1" class="card flex flex-col items-center px-2 py-4 bg-white rounded"
+                            data-title="card-1-title" data-price="card-1-price">
                             <img class="rounded bg-gray-200 px-20 py-[1.2rem] scale-90" src="images/prod1.png" alt="">
                             <div class="text-[#ffc107]">
                                 <i class="fa-solid fa-star"></i>
@@ -49,10 +56,11 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <p id="card-1-title">K. Accessories</p>
-                            <p class="text-gray-400"><span id="item-1-price">39.00</span> TK</p>
+                            <p class="text-gray-400"><span id="card-1-price">39.00</span> TK</p>
                         </div>
                         <!-- card2 -->
-                        <div id="card-2" class="flex flex-col items-center px-2 py-4 bg-white rounded">
+                        <div id="card-2" class="card flex flex-col items-center px-2 py-4 bg-white rounded"
+                            data-title="card-2-title" data-price="card-2-price">
                             <img class="rounded bg-gray-200 px-20 py-8 scale-90" src="images/prod2.png" alt="">
                             <div class="text-[#ffc107]">
                                 <i class="fa-solid fa-star"></i>
@@ -62,10 +70,11 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <p id="card-2-title">K. Accessories</p>
-                            <p class="text-gray-400"><span id="item-2-price">25.00</span> TK</p>
+                            <p class="text-gray-400"><span id="card-2-price">25.00</span> TK</p>
                         </div>
                         <!-- card3 -->
-                        <div id="card-3" class="flex flex-col items-center px-2 py-4 bg-white rounded">
+                        <div id="card-3" class="card flex flex-col items-center px-2 py-4 bg-white rounded"
+                            data-title="card-3-title" data-price="card-3-price">
                             <img class="rounded bg-gray-200 px-20 py-8 scale-90" src="images/prod3.png" alt="">
                             <div class="text-[#ffc107]">
                                 <i class="fa-solid fa-star"></i>
@@ -75,7 +84,7 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <p id="card-3-title">Home Cooker</p>
-                            <p class="text-gray-400"><span id="item-3-price">49.00</span> TK</p>
+                            <p class="text-gray-400"><span id="card-3-price">49.00</span> TK</p>
                         </div>
                     </div>
                 </section>
@@ -84,7 +93,8 @@
                     <h1 class="mb-6 text-3xl font-semibold">Sportsware</h1>
                     <div class="grid gap-6 cols-1 md:grid-cols-2 lg:grid-cols-3">
                         <!-- card1 -->
-                        <div id="card-4" class="flex flex-col items-center px-2 py-4 bg-white rounded">
+                        <div id="card-4" class="card flex flex-col items-center px-2 py-4 bg-white rounded"
+                            data-title="card-4-title" data-price="card-4-price">
                             <img class="rounded bg-gray-200 px-20 py-[2.4rem] scale-90" src="images/prod4.png" alt="">
                             <div class="text-[#ffc107]">
                                 <i class="fa-solid fa-star"></i>
@@ -94,10 +104,11 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <p id="card-4-title">Sports Black Cap</p>
-                            <p class="text-gray-400"><span id="item-4-price">35.00</span> TK</p>
+                            <p class="text-gray-400"><span id="card-4-price">35.00</span> TK</p>
                         </div>
                         <!-- card2 -->
-                        <div id="card-5" class="flex flex-col items-center px-2 py-4 bg-white rounded">
+                        <div id="card-5" class="card flex flex-col items-center px-2 py-4 bg-white rounded"
+                            data-title="card-5-title" data-price="card-5-price">
                             <img class="rounded bg-gray-200 px-20 py-5 scale-90" src="images/prod5.png" alt="">
                             <div class="text-[#ffc107]">
                                 <i class="fa-solid fa-star"></i>
@@ -107,10 +118,11 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <p id="card-5-title">Jersey Full Set</p>
-                            <p class="text-gray-400"><span id="item-5-price">99.00</span> TK</p>
+                            <p class="text-gray-400"><span id="card-5-price">99.00</span> TK</p>
                         </div>
                         <!-- card3 -->
-                        <div id="card-6" class="flex flex-col items-center px-2 py-4 bg-white rounded">
+                        <div id="card-6" class="card flex flex-col items-center px-2 py-4 bg-white rounded"
+                            data-title="card-6-title" data-price="card-6-price">
                             <img class="rounded bg-gray-200 px-20 py-7 scale-90" src="images/prod6.png" alt="">
                             <div class="text-[#ffc107]">
                                 <i class="fa-solid fa-star"></i>
@@ -120,7 +132,7 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <p id="card-6-title">Sports Cates</p>
-                            <p class="text-gray-400"><span id="item-6-price">79.00</span> TK</p>
+                            <p class="text-gray-400"><span id="card-6-price">79.00</span> TK</p>
                         </div>
                     </div>
                 </section>
@@ -129,7 +141,8 @@
                     <h1 class="mb-6 text-3xl font-semibold">Furniture</h1>
                     <div class="grid gap-6 cols-1 md:grid-cols-2 lg:grid-cols-3">
                         <!-- card1 -->
-                        <div id="card-7" class="flex flex-col items-center px-2 py-4 bg-white rounded">
+                        <div id="card-7" class="card flex flex-col items-center px-2 py-4 bg-white rounded"
+                            data-title="card-7-title" data-price="card-7-price">
                             <img class="rounded bg-gray-200 px-20 py-7 scale-90" src="images/prod7.png" alt="">
                             <div class="text-[#ffc107]">
                                 <i class="fa-solid fa-star"></i>
@@ -139,10 +152,11 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <p id="card-7-title">Single Sofa</p>
-                            <p class="text-gray-400"><span id="item-7-price">89.00</span> TK</p>
+                            <p class="text-gray-400"><span id="card-7-price">89.00</span> TK</p>
                         </div>
                         <!-- card2 -->
-                        <div id="card-8" class="flex flex-col items-center px-2 py-4 bg-white rounded">
+                        <div id="card-8" class="card flex flex-col items-center px-2 py-4 bg-white rounded"
+                            data-title="card-8-title" data-price="card-8-price">
                             <img class="rounded bg-gray-200 px-20 py-5 scale-90" src="images/prod8.png" alt="">
                             <div class="text-[#ffc107]">
                                 <i class="fa-solid fa-star"></i>
@@ -152,10 +166,11 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <p id="card-8-title">Relax Chair</p>
-                            <p class="text-gray-400"><span id="item-8-price">39.00</span> TK</p>
+                            <p class="text-gray-400"><span id="card-8-price">39.00</span> TK</p>
                         </div>
                         <!-- card3 -->
-                        <div id="card-9" class="flex flex-col items-center px-2 py-4 bg-white rounded">
+                        <div id="card-9" class="card flex flex-col items-center px-2 py-4 bg-white rounded"
+                            data-title="card-9-title" data-price="card-9-price">
                             <img class="rounded bg-gray-200 px-20 py-[2.2rem] scale-90" src="images/prod9.png" alt="">
                             <div class="text-[#ffc107]">
                                 <i class="fa-solid fa-star"></i>
@@ -165,7 +180,7 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <p id="card-9-title">Comfort Sofa</p>
-                            <p class="text-gray-400"><span id="item-9-price">99.00</span> TK</p>
+                            <p class="text-gray-400"><span id="card-9-price">99.00</span> TK</p>
                         </div>
                     </div>
                 </section>
@@ -179,6 +194,10 @@
                         <i class="fa-solid fa-triangle-exclamation"></i>
                         <p class="text-sm">Invalid Coupon Code!</p>
                     </div>
+                    <div id="coupon-invalid-min-checkout" class="text-red-500 flex gap-1 items-center hidden mt-3">
+                        <i class="fa-solid fa-triangle-exclamation"></i>
+                        <p class="text-sm">min. checkout 200 to apply!</p>
+                    </div>
                     <div id="coupon-container" class="mt-3 flex">
                         <input oninput="couponCodeBtnActivation()" id="coupon-field"
                             class="w-full border text-sm font-semibold px-3 py-2 rounded-l-lg" type="text"
@@ -191,7 +210,7 @@
                 <div class="mt-6 bg-white p-5 rounded">
                     <div class="font-semibold">
                         <ul id="selected-items">
-
+                            
                         </ul>
                     </div>
 
@@ -206,8 +225,9 @@
                     <hr class="my-4">
                     <div>
 
-                        <button id="btn-purchase" class="bg-pink-500 px-6 py-2 rounded text-white w-full">Make
-                            Purchase
+                        <button id="btn-purchase"
+                            class="bg-pink-300 border-pink-300 px-6 py-2 rounded text-white w-full" disabled>
+                            Make Purchase
                         </button>
                     </div>
                 </div>
